--- a/SeleniumFramework/test-output/emailable-report.html
+++ b/SeleniumFramework/test-output/emailable-report.html
@@ -8,15 +8,13 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">139,518</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">1,221</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">campaigns.CeateCampaignwithProductTest</td><td><a href="#m0">CeateCampaignwithProduct</a></td><td rowspan="1">1681926744152</td><td rowspan="1">26752</td></tr><tr class="passedodd"><td rowspan="1">campaigns.CreateCampaignTest</td><td><a href="#m1">CreateCampaign</a></td><td rowspan="1">1681926800939</td><td rowspan="1">9630</td></tr><tr class="passedeven"><td rowspan="1">organization.CreateOrganizationTest</td><td><a href="#m2">CreateOrganization</a></td><td rowspan="1">1681926686139</td><td rowspan="1">16680</td></tr><tr class="passedodd"><td rowspan="1">product.CreateProductTest</td><td><a href="#m3">CreateProduct</a></td><td rowspan="1">1681926782069</td><td rowspan="1">9948</td></tr><tr class="passedeven"><td rowspan="1">product.CreateProductandDeleteProductTest</td><td><a href="#m4">CreateProductandDeleteProduct</a></td><td rowspan="1">1681926713787</td><td rowspan="1">15196</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">practice.Dataproviderusingexcel</td><td><a href="#m0">readData</a></td><td rowspan="3">1683126589013</td><td rowspan="3">18</td></tr><tr class="passedeven"><td><a href="#m1">readData</a></td></tr><tr class="passedeven"><td><a href="#m2">readData</a></td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">campaigns.CeateCampaignwithProductTest#CeateCampaignwithProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">campaigns.CreateCampaignTest#CreateCampaign</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">organization.CreateOrganizationTest#CreateOrganization</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">product.CreateProductTest#CreateProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">product.CreateProductandDeleteProductTest#CreateProductandDeleteProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">practice.Dataproviderusingexcel#readData</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Banglore</td><td>Hassan</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">practice.Dataproviderusingexcel#readData</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Mysore</td><td>Banglore</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">practice.Dataproviderusingexcel#readData</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Hassan</td><td>Mysore</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
