--- a/SeleniumFramework/test-output/old/Default suite/classes.html
+++ b/SeleniumFramework/test-output/old/Default suite/classes.html
@@ -4,45 +4,25 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>product.CreateProductandDeleteProductTest</td>
+<td>practice.Dataproviderusingexcel</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CreateProductandDeleteProduct</td>
+<td>readData</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>BC</td>
-<td>regressiontest smoketest </td>
-</tr>
-<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>BM</td>
-<td>regressiontest smoketest </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>AM</td>
-<td>regressiontest smoketest </td>
-</tr>
-<tr>
 <td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>AC</td>
-<td>regressiontest smoketest </td>
 </tr>
 </table>
