--- a/SeleniumFramework/test-output/old/Default suite/methods-alphabetical.html
+++ b/SeleniumFramework/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ac878f">  <td>23/04/19 23:19:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AC()[pri:0, instance:product.CreateProductandDeleteProductTest@1189dd52]">&lt;&lt;AC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="ac878f">  <td>23/04/19 23:19:39</td>   <td>-7048</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:product.CreateProductandDeleteProductTest@1189dd52]">&lt;&lt;AM</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ac878f">  <td>23/04/19 23:19:46</td>   <td>62</td> <td title="&lt;&lt;BaseClass.AS()[pri:0, instance:product.CreateProductandDeleteProductTest@1189dd52]">&lt;&lt;AS</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ac878f">  <td>23/04/19 23:19:46</td>   <td>7</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.AT()[pri:0, instance:product.CreateProductandDeleteProductTest@1189dd52]">&lt;&lt;AT</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ac878f">  <td>23/04/19 23:19:04</td>   <td>-42607</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BC()[pri:0, instance:product.CreateProductandDeleteProductTest@1189dd52]">&gt;&gt;BC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ac878f">  <td>23/04/19 23:19:07</td>   <td>-39561</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:product.CreateProductandDeleteProductTest@1189dd52]">&gt;&gt;BM</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ac878f">  <td>23/04/19 23:19:03</td>   <td>-42646</td> <td title="&gt;&gt;BaseClass.BS()[pri:0, instance:product.CreateProductandDeleteProductTest@1189dd52]">&gt;&gt;BS</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ac878f">  <td>23/04/19 23:19:04</td>   <td>-42631</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.BT()[pri:0, instance:product.CreateProductandDeleteProductTest@1189dd52]">&gt;&gt;BT</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="67a0d6">  <td>23/04/19 23:19:14</td>   <td>-32586</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateProductandDeleteProductTest.CreateProductandDeleteProduct()[pri:0, instance:product.CreateProductandDeleteProductTest@1189dd52]">CreateProductandDeleteProduct</td> 
+<tr bgcolor="d4bf7e">  <td>23/05/03 20:39:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Dataproviderusingexcel.readData(java.lang.String,java.lang.String)[pri:0, instance:practice.Dataproviderusingexcel@1a451d4d]">readData</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="d4bf7e">  <td>23/05/03 20:39:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Dataproviderusingexcel.readData(java.lang.String,java.lang.String)[pri:0, instance:practice.Dataproviderusingexcel@1a451d4d]">readData</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="d4bf7e">  <td>23/05/03 20:39:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Dataproviderusingexcel.readData(java.lang.String,java.lang.String)[pri:0, instance:practice.Dataproviderusingexcel@1a451d4d]">readData</td> 
   <td>main@1159190947</td>   <td></td> </tr>
 </table>
