--- a/SeleniumFramework/test-output/old/Suite/methods.html
+++ b/SeleniumFramework/test-output/old/Suite/methods.html
@@ -1,62 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:21:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BC()[pri:0, instance:organization.CreateOrganizationTest@436813f3]">&gt;&gt;BC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:23:12</td>   <td>118961</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:product.CreateProductTest@5c33f1a9]">&lt;&lt;AM</td> 
+<tr bgcolor="9cd3b1">  <td>23/05/05 14:13:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:campaigns.CeateCampaignwithProductTest@2d1ef81a]">&lt;&lt;AM</td> 
 <td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:21:13</td>   <td>-44</td> <td title="&gt;&gt;BaseClass.BS()[pri:0, instance:organization.CreateOrganizationTest@436813f3]">&gt;&gt;BS</td> 
+<tr bgcolor="9cd3b1">  <td>23/05/05 14:14:05</td>   <td>39162</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AC()[pri:0, instance:campaigns.CreateCampaignTest@5542c4ed]">&lt;&lt;AC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="9cd3b1">  <td>23/05/05 14:12:48</td>   <td>-38221</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BC()[pri:0, instance:campaigns.CeateCampaignwithProductTest@2d1ef81a]">&gt;&gt;BC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="9cd3b1">  <td>23/05/05 14:12:48</td>   <td>-38701</td> <td title="&gt;&gt;BaseClass.BS()[pri:0, instance:campaigns.CeateCampaignwithProductTest@2d1ef81a]">&gt;&gt;BS</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:21:16</td>   <td>3541</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:organization.CreateOrganizationTest@436813f3]">&gt;&gt;BM</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:23:32</td>   <td>139486</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.AT()[pri:0, instance:organization.CreateOrganizationTest@436813f3]">&lt;&lt;AT</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="d3bc82">  <td>23/04/19 23:22:24</td>   <td>71093</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CeateCampaignwithProductTest.CeateCampaignwithProduct()[pri:0, instance:campaigns.CeateCampaignwithProductTest@7f0eb4b4]">CeateCampaignwithProduct</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="7d9dab">  <td>23/04/19 23:23:20</td>   <td>127880</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateCampaignTest.CreateCampaign()[pri:0, instance:campaigns.CreateCampaignTest@1623b78d]">CreateCampaign</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:21:13</td>   <td>-29</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.BT()[pri:0, instance:organization.CreateOrganizationTest@436813f3]">&gt;&gt;BT</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:21:42</td>   <td>29761</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:organization.CreateOrganizationTest@436813f3]">&lt;&lt;AM</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:22:12</td>   <td>59866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:campaigns.CeateCampaignwithProductTest@7f0eb4b4]">&gt;&gt;BM</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="67a0d6">  <td>23/04/19 23:21:26</td>   <td>13080</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOrganizationTest.CreateOrganization()[pri:0, instance:organization.CreateOrganizationTest@436813f3]">CreateOrganization</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:22:53</td>   <td>100516</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BC()[pri:0, instance:product.CreateProductTest@5c33f1a9]">&gt;&gt;BC</td> 
+<tr bgcolor="9cd3b1">  <td>23/05/05 14:13:33</td>   <td>7169</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AC()[pri:0, instance:campaigns.CeateCampaignwithProductTest@2d1ef81a]">&lt;&lt;AC</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:21:46</td>   <td>33412</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:product.CreateProductandDeleteProductTest@2b662a77]">&gt;&gt;BM</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:22:08</td>   <td>55928</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:product.CreateProductandDeleteProductTest@2b662a77]">&lt;&lt;AM</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:22:10</td>   <td>57867</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AC()[pri:0, instance:product.CreateProductandDeleteProductTest@2b662a77]">&lt;&lt;AC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:22:53</td>   <td>100213</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AC()[pri:0, instance:campaigns.CeateCampaignwithProductTest@7f0eb4b4]">&lt;&lt;AC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="d4bf7e">  <td>23/04/19 23:23:02</td>   <td>109010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateProductTest.CreateProduct()[pri:0, instance:product.CreateProductTest@5c33f1a9]">CreateProduct</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:22:11</td>   <td>58305</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BC()[pri:0, instance:campaigns.CeateCampaignwithProductTest@7f0eb4b4]">&gt;&gt;BC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:22:55</td>   <td>102156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:product.CreateProductTest@5c33f1a9]">&gt;&gt;BM</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="61d194">  <td>23/04/19 23:21:53</td>   <td>40728</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateProductandDeleteProductTest.CreateProductandDeleteProduct()[pri:0, instance:product.CreateProductandDeleteProductTest@2b662a77]">CreateProductandDeleteProduct</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:23:13</td>   <td>120539</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BC()[pri:0, instance:campaigns.CreateCampaignTest@1623b78d]">&gt;&gt;BC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:21:45</td>   <td>31965</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BC()[pri:0, instance:product.CreateProductandDeleteProductTest@2b662a77]">&gt;&gt;BC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:23:13</td>   <td>120335</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AC()[pri:0, instance:product.CreateProductTest@5c33f1a9]">&lt;&lt;AC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:23:32</td>   <td>139174</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AC()[pri:0, instance:campaigns.CreateCampaignTest@1623b78d]">&lt;&lt;AC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:23:30</td>   <td>137513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:campaigns.CreateCampaignTest@1623b78d]">&lt;&lt;AM</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:23:32</td>   <td>139511</td> <td title="&lt;&lt;BaseClass.AS()[pri:0, instance:organization.CreateOrganizationTest@436813f3]">&lt;&lt;AS</td> 
+<tr bgcolor="9cd3b1">  <td>23/05/05 14:14:06</td>   <td>40102</td> <td title="&lt;&lt;BaseClass.AS()[pri:0, instance:campaigns.CeateCampaignwithProductTest@2d1ef81a]">&lt;&lt;AS</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:21:44</td>   <td>31657</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AC()[pri:0, instance:organization.CreateOrganizationTest@436813f3]">&lt;&lt;AC</td> 
+<tr bgcolor="627689">  <td>23/05/05 14:12:57</td>   <td>-29178</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CeateCampaignwithProductTest.CeateCampaignwithProduct()[pri:0, instance:campaigns.CeateCampaignwithProductTest@2d1ef81a]">CeateCampaignwithProduct</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="9cd3b1">  <td>23/05/05 14:12:51</td>   <td>-35042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:campaigns.CeateCampaignwithProductTest@2d1ef81a]">&gt;&gt;BM</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="9cd3b1">  <td>23/05/05 14:13:34</td>   <td>7813</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BC()[pri:0, instance:campaigns.CreateCampaignTest@5542c4ed]">&gt;&gt;BC</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:23:14</td>   <td>121645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:campaigns.CreateCampaignTest@1623b78d]">&gt;&gt;BM</td> 
+<tr bgcolor="9cd3b1">  <td>23/05/05 14:12:48</td>   <td>-38241</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.BT()[pri:0, instance:campaigns.CeateCampaignwithProductTest@2d1ef81a]">&gt;&gt;BT</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="9cd3b1">  <td>23/05/05 14:13:36</td>   <td>9353</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:campaigns.CreateCampaignTest@5542c4ed]">&gt;&gt;BM</td> 
 <td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e199a4">  <td>23/04/19 23:22:50</td>   <td>97845</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:campaigns.CeateCampaignwithProductTest@7f0eb4b4]">&lt;&lt;AM</td> 
+<tr bgcolor="9cd3b1">  <td>23/05/05 14:14:06</td>   <td>39505</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.AT()[pri:0, instance:campaigns.CeateCampaignwithProductTest@2d1ef81a]">&lt;&lt;AT</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="9cd3b1">  <td>23/05/05 14:14:04</td>   <td>37319</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:campaigns.CreateCampaignTest@5542c4ed]">&lt;&lt;AM</td> 
 <td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="92efc3">  <td>23/05/05 14:13:44</td>   <td>17265</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateCampaignTest.CreateCampaign()[pri:0, instance:campaigns.CreateCampaignTest@5542c4ed]">CreateCampaign</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
 </table>
